Update WithMockJwtTokenSecurityContextFactory.java